--- a/src/pages/News.css
+++ b/src/pages/News.css
@@ -28,7 +28,7 @@
   }
   
   /* Контент модального окна */
-  .modal-content {
+  .modal-contents {
     background-color: #fff;
     margin: 10% auto;
     padding: 20px;
@@ -39,13 +39,13 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   }
   
-  .modal-content h2 {
+  .modal-contents h2 {
     color: #333;
     margin-bottom: 20px;
   }
   
-  .modal-content input,
-  .modal-content textarea {
+  .modal-contents input,
+  .modal-contents textarea {
     width: 90%;
     padding: 10px;
     margin: 10px 0;
@@ -70,7 +70,7 @@
   }
   
   /* Кнопка отправки */
-  .modal-content button {
+  .modal-contents button {
     padding: 10px 20px;
     background-color: #28a745;
     color: white;
@@ -80,7 +80,91 @@
     font-size: 16px;
   }
   
-  .modal-content button:hover {
+  .modal-contents button:hover {
     background-color: #218838;
   }
+
+  /* NewsList.css */
+
+/* Общие стили для списка новостей */
+.news-list {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f9f9f9;
+  }
+  
+  .news-list h2 {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 2em;
+    color: #333;
+  }
+  
+  /* Стили для отдельных новостных элементов */
+  .news-item {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 20px;
+    margin-bottom: 20px;
+    transition: box-shadow 0.3s ease;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .news-item:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .news-title {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+    color: #007BFF;
+  }
+  
+  .news-description {
+    font-size: 1em;
+    color: #555;
+    margin-bottom: 15px;
+  }
+
+  .newss {
+    display: flex;
+    gap: 20px;
+  }
+  
+  /* Стили для изображений в новостях */
+  .news-image {
+    /* max-width: 100%; */
+    height: 175px;
+    width: 170px;
+    border-radius: 5px;
+    object-fit: cover;
+  }
+  
+  /* Сообщение при отсутствии новостей */
+  .news-list p {
+    text-align: center;
+    font-size: 1.2em;
+    color: #777;
+  }
+  
+  /* Адаптивность для мобильных устройств */
+  @media (max-width: 768px) {
+    .news-item {
+      padding: 15px;
+    }
+  
+    .news-title {
+      font-size: 1.3em;
+    }
+  
+    .news-description {
+      font-size: 0.95em;
+    }
+
+
+  }
+  
   
