--- a/src/pages/Vacancies.css
+++ b/src/pages/Vacancies.css
@@ -100,6 +100,7 @@
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 20px;
     height: 100%;
+    width: 1500px;
 }
 
 .vacancy-item {
